--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "tailwindcss-animated": "^1.0.1"
   },
   "scripts": {
     "scanTailwind": "npx tailwindcss -i ./src/css/config.css -o ./src/css/output.css --watch"
